<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Android Glances</string>
    <string name="app_version">1.0.0</string>
    
    <string name="ip_hostname">IP or Hostname</string>
    <string name="port">Port</string>
    <string name="password">Password (empty for none)</string>
    <string name="server_name">Server name</string>
    <string name="server_name_hint">Home PC</string>
    <string name="server_url_hint">server.example.com</string>
    <string name="default_port">61209</string>
    
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>

    <string name="monitor_status">%1$s old, refresh every %2$s</string>
    <string name="hard_drive_temperature">Hard Drive Temperatures</string>
    <string name="sensors">Sensors</string>
    <string name="battery">Battery</string>
    <string name="monitored_processes">Monitored Processes</string>
    <string name="cpu">CPU</string>
    <string name="memory">Memory</string>
    <string name="swap">Swap</string>
    <string name="network_interfaces">Network Interfaces</string>
    <string name="file_systems">File Systems</string>
    <string name="disk_io">Disk IO</string>
    <string name="cpu_cores">CPU (%d cores)</string>
    <string name="no_data">no data</string>
    <string name="used">Used: %1$s / %2$s</string>
    <string name="available">%1$s - %2$s / %3$s available</string>
    <string name="read_write">%1$s: Read %2$s/s, Write %3$s/s</string>
    <string name="server_removed">removed server: </string>
    
    <string name="add_server">Add a server</string>
    <string name="edit_server">Edit server details</string>
    <string name="remove_server">Remove a server</string>
    
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="settings_update_interval">Update interval</string>
    <string name="settings_update_interval_summary">How often to fetch data from Glances server</string>
    <string name="settings_update_interval_dialog">Set new update interval (in seconds)</string>

    <string name="settings_process_sort">Process sort</string>
    <string name="settings_process_sort_summary">How to sort process list</string>
    <string name="settings_process_sort_dialog">Choose process sorting method</string>

    <string name="proc_sort_cpu_and_mem">CPU and Memory</string>
    <string name="proc_sort_cpu">CPU</string>
    <string name="proc_sort_mem">Memory</string>
    <string name="proc_sort_name">Name</string>
    <string name="proc_sort_io">IO R/W</string>

    <string name="no_server_selected">No server selected</string>
    <string name="connect_to_server">Trying to connect to server</string>
    <string name="about_author">author: Jon Renner</string>
    <string name="about_email">rennerjc@gmail.com</string>
    <string name="about_url">Report a bug, or request a feature:\nhttps://github.com/jrenner/android-glances/issues/new</string>
    <string name="about_glances">To set up a Glances server, visit:\nhttp://nicolargo.github.io/glances/\nFull list of contributors:\nhttps://github.com/jrenner/android-glances/blob/master/AUTHORS</string>

    <string name="error_auth_failed">authentication error - check password</string>
    <string name="error_conn_refused">connection refused</string>
    <string name="error_bad_hostname">bad hostname</string>
    <string name="error_invalid_port">invalid port</string>
    <string name="error_undefined">undefined error</string>

    <string name="invalid_port">port %s is not valid</string>
    <string name="invalid_url">URL %s is not valid</string>
    <string name="invalid_server_name">server name %s is not valid</string>

    <string name="textsetter_processes_disabled">process data disabled by server</string>
    <string name="textsetter_top_processes">Top 10 Processes</string>
</resources>